# gazelle_update_issue

./: BUILD  README.md  WORKSPACE  bazel-bin  bazel-gazelle_update_issue  bazel-out  bazel-testlogs  go.mod  rules.bzl
main/: BUILD.bazel
