load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//:rules.bzl", "my_macro")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/Helcaraxan/gazelle_update_issue/main",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

my_macro(
    name = "main",
)
